--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   "dependencies": {
     "admin-bro-expressjs": "^2.1.1",
     "admin-bro-mongoose": "^0.5.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-formidable": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
