--- a/package.json
+++ b/package.json
@@ -30,15 +30,20 @@
     "admin-bro-mongoose": "^0.5.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "18.2.0"
   }
 }
