--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-validator": "^6.14.2",
     "mongoose": "^6.5.3",
     "nodemon": "^2.0.19",
     "password": "^0.1.1"
