--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "mongoose": "^6.5.3",
     "nodemon": "^2.0.19",
