--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
-    "mongoose": "^6.5.3",
+    "mongoose": "^6.5.4",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "password": "^0.1.1"
   }
 }
